examples/test/testpolicy10496.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10496
  namespace: namespace373
spec:
  podSelector:
    matchLabels:
      key16: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value20
          key9: value15
      podSelector:
        matchLabels:
          key36: value41
          key18: value46
